[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Menú.gd" type="Script" id=1]
[ext_resource path="res://Images/Menuimg2.png" type="Texture" id=2]
[ext_resource path="res://Sounds/OST/One Punch Man - Opening 1.mp3" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.780392, 0.168627, 0.168627, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.780392, 0.168627, 0.168627, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.780392, 0.168627, 0.168627, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.780392, 0.168627, 0.168627, 1 )

[node name="Menú" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = -0.00292969
anchor_top = 0.00166667
anchor_right = 0.998047
anchor_bottom = 1.00167
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = 112.0
margin_right = 166.0
margin_bottom = 209.0

[node name="ComenzarButton" type="Button" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 20.0
custom_styles/focus = SubResource( 1 )
text = "Comenzar"

[node name="ContinuarButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 280.0
margin_bottom = 44.0
custom_styles/focus = SubResource( 2 )
text = "Continuar"

[node name="OpcionesButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 280.0
margin_bottom = 68.0
custom_styles/focus = SubResource( 3 )
text = "Opciones"

[node name="SalirButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 280.0
margin_bottom = 92.0
custom_styles/focus = SubResource( 4 )
text = "Salir"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -11.819
autoplay = true

[connection signal="pressed" from="VBoxContainer/ComenzarButton" to="." method="_on_ComenzarButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinuarButton" to="." method="_on_ContinuarButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OpcionesButton" to="." method="_on_OpcionesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SalirButton" to="." method="_on_SalirButton_pressed"]
